# napari-cellpose-npy

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_cellpose_npy/: _reader.py  napari.yaml
src/napari_cellpose_npy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/napari_cellpose_npy/_tests/: test_reader.py
