[metadata]
name = napari-cellpose-npy
version = attr: napari_cellpose_npy.__version__
description = A simple plugin to load cellpose segmentation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arnavm/napari-cellpose-npy
author = Arnav Moudgil
author_email = amoudgil@stanford.edu
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/arnavm/napari-cellpose-npy/issues
    Documentation = https://github.com/arnavm/napari-cellpose-npy#README.md
    Source Code = https://github.com/arnavm/napari-cellpose-npy
    User Support = https://github.com/arnavm/napari-cellpose-npy/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cellpose-npy = napari_cellpose_npy:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
